--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@erento/nestjs-common",
-  "version": "5.3.0",
+  "version": "5.4.0",
   "engines": {
     "node": ">=16.0.0",
     "npm": ">=8.0.0"
@@ -59,6 +59,7 @@
     "axios": "0.26.0",
     "chalk": "4.1.2",
     "json-stringify-safe": "5.0.1",
+    "moment-timezone": "0.5.34",
     "rxjs": "7.5.4",
     "uuid": "8.3.2"
   },
