--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "peerDependencies": {
     "@bugsnag/js": ">=7.10.1",
+    "@nestjs/axios": ">=1.0.0",
     "@nestjs/common": ">=8.0.0",
     "@nestjs/core": ">=8.0.0",
     "express-http-context": ">=1.2.4",
@@ -34,6 +35,7 @@
   "devDependencies": {
     "@bugsnag/js": "7.16.1",
     "@erento/eslint-plugin-erento-rules": "1.0.0",
+    "@nestjs/axios": "1.0.0",
     "@nestjs/common": "8.3.0",
     "@nestjs/core": "8.3.0",
     "@types/express": "4.17.13",
@@ -56,7 +58,9 @@
     "typescript": "4.5.5"
   },
   "dependencies": {
-    "axios": "0.26.0",
+    "@google-cloud/profiler": "5.0.3",
+    "@google-cloud/trace-agent": "7.1.2",
+    "axios": "1.1.3",
     "chalk": "4.1.2",
     "json-stringify-safe": "5.0.1",
     "moment-timezone": "0.5.34",
