--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -36,11 +36,12 @@
     "@bugsnag/js": "7.18.0",
     "@erento/eslint-plugin-erento-rules": "2.1.0",
     "@nestjs/axios": "1.0.0",
-    "@nestjs/common": "8.3.0",
-    "@nestjs/core": "8.3.0",
-    "@types/express": "4.17.13",
+    "@nestjs/common": "9.2.1",
+    "@nestjs/core": "9.2.1",
+    "@types/express": "4.17.15",
     "@types/jest": "29.2.4",
     "@types/node": "16.11.25",
+    "@types/uuid": "9.0.0",
     "@typescript-eslint/eslint-plugin": "5.39.0",
     "@typescript-eslint/parser": "5.39.0",
     "eslint": "8.24.0",
@@ -48,7 +49,7 @@
     "eslint-plugin-jsdoc": "39.3.6",
     "eslint-plugin-prefer-arrow": "1.2.3",
     "eslint-plugin-unicorn": "44.0.2",
-    "express": "4.17.2",
+    "express": "4.18.2",
     "express-http-context": "1.2.4",
     "jest": "29.3.1",
     "lint-staged": "13.1.0",
@@ -63,9 +64,9 @@
     "axios": "1.1.3",
     "chalk": "4.1.2",
     "json-stringify-safe": "5.0.1",
-    "moment-timezone": "0.5.34",
+    "moment-timezone": "0.5.40",
     "rxjs": "7.5.4",
-    "uuid": "8.3.2"
+    "uuid": "9.0.0"
   },
   "jest": {
     "transform": {
