--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -59,6 +59,7 @@
     "typescript": "4.5.5"
   },
   "dependencies": {
+    "@erento/nestjs-module-google-pubsub": "3.1.0",
     "@google-cloud/profiler": "5.0.3",
     "@google-cloud/trace-agent": "7.1.2",
     "axios": "1.1.3",
