--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@erento/nestjs-common",
-  "version": "7.2.0-beta.0",
+  "version": "7.1.0",
   "engines": {
     "node": ">=16.0.0",
     "npm": ">=8.0.0"
