--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -59,12 +59,14 @@
     "typescript": "4.5.5"
   },
   "dependencies": {
+    "@erento/nestjs-module-google-pubsub": "3.1.0",
     "@google-cloud/profiler": "5.0.3",
     "@google-cloud/trace-agent": "7.1.2",
     "axios": "1.1.3",
     "chalk": "4.1.2",
     "json-stringify-safe": "5.0.1",
     "moment-timezone": "0.5.40",
+    "ms": "3.0.0-canary.1",
     "rxjs": "7.5.4",
     "uuid": "9.0.0"
   },
