--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -30,7 +30,8 @@
     "@nestjs/common": ">=8.0.0",
     "@nestjs/core": ">=8.0.0",
     "express-http-context": ">=1.2.4",
-    "typescript": ">=4.0.0"
+    "typescript": ">=4.0.0",
+    "slugify": ">=1.6.0"
   },
   "devDependencies": {
     "@bugsnag/js": "7.18.0",
