--- a/modules/google-pubsub/tsconfig.json
+++ b/modules/google-pubsub/tsconfig.json
@@ -8,8 +8,6 @@
     "src/**/*"
   ],
   "exclude": [
-    "node_modules",
-    "src/**/*.spec.ts",
-    "src/**/*.test.ts"
+    "node_modules"
   ]
 }
