--- a/modules/common/package.json
+++ b/modules/common/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@erento/nestjs-common",
-  "version": "7.7.0",
+  "version": "8.0.0",
   "engines": {
-    "node": ">=16.0.0",
-    "npm": ">=8.0.0"
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   },
   "engineStrict": true,
   "description": "NestJS module with some shared utilities",
@@ -25,51 +25,47 @@
   },
   "license": "MIT",
   "peerDependencies": {
-    "@bugsnag/js": ">=7.10.1",
-    "@nestjs/axios": ">=1.0.0",
-    "@nestjs/common": ">=8.0.0",
-    "@nestjs/core": ">=8.0.0",
+    "@bugsnag/js": ">=7.22.3",
+    "@nestjs/axios": ">=3.0.0",
+    "@nestjs/common": ">=10.3.1",
+    "@nestjs/core": ">=10.3.1",
     "express-http-context": ">=1.2.4",
-    "typescript": ">=4.0.0",
+    "typescript": ">=5.2.2",
     "slugify": ">=1.6.0"
   },
   "devDependencies": {
-    "@bugsnag/js": "7.18.0",
-    "@erento/eslint-plugin-erento-rules": "2.1.0",
-    "@nestjs/axios": "1.0.0",
-    "@nestjs/common": "9.2.1",
-    "@nestjs/core": "9.2.1",
-    "@types/express": "4.17.15",
-    "@types/jest": "29.2.4",
-    "@types/node": "16.11.25",
-    "@types/uuid": "9.0.0",
-    "@typescript-eslint/eslint-plugin": "5.39.0",
-    "@typescript-eslint/parser": "5.39.0",
-    "eslint": "8.24.0",
-    "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsdoc": "39.3.6",
-    "eslint-plugin-prefer-arrow": "1.2.3",
-    "eslint-plugin-unicorn": "44.0.2",
+    "@bugsnag/js": "7.22.4",
+    "@erento/eslint-plugin-erento-rules": "3.0.0",
+    "@nestjs/axios": "3.0.2",
+    "@nestjs/common": "10.3.1",
+    "@nestjs/core": "10.3.1",
+    "@types/express": "4.17.21",
+    "@types/jest": "29.5.12",
+    "@types/node": "20.10.8",
+    "@types/uuid": "9.0.8",
     "express": "4.18.2",
     "express-http-context": "1.2.4",
-    "jest": "29.3.1",
-    "lint-staged": "13.1.0",
+    "jest": "29.7.0",
+    "lint-staged": "15.2.2",
     "prettier": "2.5.1",
     "reflect-metadata": "0.1.13",
-    "ts-jest": "29.0.3",
-    "typescript": "4.5.5"
+    "ts-jest": "29.1.2",
+    "typescript": "5.2.2"
   },
   "dependencies": {
-    "@erento/nestjs-module-google-pubsub": "3.1.0",
-    "@google-cloud/profiler": "5.0.3",
-    "@google-cloud/trace-agent": "7.1.2",
-    "axios": "1.1.3",
+    "@erento/nestjs-module-google-pubsub": "4.0.0",
+    "@google-cloud/profiler": "6.0.1",
+    "@google-cloud/trace-agent": "8.0.0",
+    "axios": "1.6.7",
     "chalk": "4.1.2",
     "json-stringify-safe": "5.0.1",
-    "moment-timezone": "0.5.40",
+    "moment-timezone": "0.5.45",
     "ms": "3.0.0-canary.1",
-    "rxjs": "7.5.4",
-    "uuid": "9.0.0"
+    "rxjs": "7.8.1",
+    "uuid": "9.0.1"
+  },
+  "overrides": {
+    "minimatch": "5.1.6"
   },
   "jest": {
     "transform": {
